salesforce/force-app/main/default/objects/Transaction__c/fields/Check_Chase_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Check_Chase_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the Chase Pending Check Orders flow when it files the follow-up task, and read by that same flow to decide whether to file one. It is what makes the chase happen once rather than every night: the flow cannot ask "have I already done this" any other way, and a task closed by somebody who did not get the check would otherwise be replaced by a new one the next morning. Untick it by hand to have the flow chase again.</description>
    <inlineHelpText>Ticked once the office has been asked to chase this check. Untick to have the nightly flow ask again.</inlineHelpText>
    <label>Check Chase Task Created</label>
    <type>Checkbox</type>
</CustomField>