salesforce/force-app/main/default/objects/Transaction__c/fields/Days_Awaiting_Check__c.field-meta.xml
<CustomField>
    <fullName>Days_Awaiting_Check__c</fullName>
    <description>Whole days since this order was placed, for a pending order being paid by check, and blank for everything else. Deliberately measured from Created Date and NOT from Received At: nothing has been received, which is the entire point of the pending status, and Received At stays empty until a person banks the check. Used by the Chase Pending Check Orders flow to decide when a week has passed, and by the Awaiting a Check list view so the same number the flow acts on is the one the office can see.</description>
    <formula>IF(
  AND(ISPICKVAL(Status__c, &quot;pending&quot;), Payment_Method__c = &quot;Check&quot;),
  FLOOR(NOW() - CreatedDate),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Days since the order was placed, while it waits on a check. Blank once it is no longer a pending check.</inlineHelpText>
    <label>Days Awaiting Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>