salesforce/force-app/main/default/objects/Transaction__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <description>Revenue FORGONE on this order - what the discount took off, not money received. It is NOT part of gross, fee or net, and must never be added to them: Amount Gross is what Stripe actually charged, after the discount. Summing this into a revenue figure overstates income. Report it on its own, as the cost of a discount programme.</description>
    <inlineHelpText>What the discount took off. Revenue forgone, NOT income - never add this to Amount Gross or Amount Net.</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>