salesforce/force-app/main/default/objects/Transaction__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <description>The percentage actually applied to this order, recorded at the moment of purchase. Kept here rather than read from the code record, because the code's own Percent Off can be edited afterwards and this must still say what this buyer was charged.</description>
    <inlineHelpText>Percent applied to this order at the time of purchase.</inlineHelpText>
    <label>Discount Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>