salesforce/force-app/main/default/objects/Transaction__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <description>Sales tax collected on this order. This is money held in trust for the state, NOT income: it is part of Amount Gross because the buyer paid it, but it belongs in a liability account and must be remitted. Do not treat it as revenue in any report. Zero on an exempt or out-of-state order, and zero is a real answer - a blank means no tax was ever calculated.</description>
    <inlineHelpText>Sales tax collected. Held in trust for the state - not income.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>