salesforce/force-app/main/default/objects/Transaction__c/fields/Tax_Exemption_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Certificate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The certificate this order's exemption rests on. Set only where tax was not charged on a taxable destination, and the record it points at is the evidence for that. Restricted on delete: a certificate that an order relies on cannot be removed out from under it.</description>
    <inlineHelpText>The certificate this order's exemption rests on. Blank on any taxed order.</inlineHelpText>
    <label>Tax Exemption Certificate</label>
    <referenceTo>Tax_Exemption_Certificate__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>