salesforce/force-app/main/default/objects/Transaction__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>The rate applied, as a percentage - 6 for Kentucky's 6%. Recorded per order rather than looked up, so a rate change does not silently rewrite the history of what was charged. Zero where no tax applied.</description>
    <inlineHelpText>Rate applied to this order, as a percentage. 6 means 6%.</inlineHelpText>
    <label>Tax Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>