salesforce/force-app/main/default/objects/Transaction__c/fields/Tax_State__c.field-meta.xml
<CustomField>
    <fullName>Tax_State__c</fullName>
    <description>The destination state the tax decision was made against - where the order ships, not where the buyer's card is billed. Two-letter code. This is the fact that determines whether tax applies at all, so it is recorded even when the answer was no tax.</description>
    <inlineHelpText>Destination state used for the tax decision. Where it ships, not where the card bills.</inlineHelpText>
    <label>Tax State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>